Bug 237731 - folders don't automatically open on dragging a file when in details view
Summary: folders don't automatically open on dragging a file when in details view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-15 16:39 UTC by Janet
Modified: 2010-11-12 22:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2010-05-15 16:39:34 UTC
Version:           1.4 (using 4.4.3 (KDE 4.4.3), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.33-4.slh.1-sidux-686

I have configured dolphin to automatically open folders when I drag some content onto them. Alas this only works when the view of the target window is set to icons view. In detailed view, the folders don't react when I drag some file.
Comment 1 Peter Penz 2010-05-17 18:56:22 UTC
Thanks for the report, but I cannot reproduce the issue: It works well here also in the details view (trunk + KDE SC 4.4.3). Have you enabled the "Expandable Folders" setting in the details view (right click -> [x] Expandable Folders)? I've tested it with and without expandable folders, but works fine. Very strange...
Comment 2 Janet 2010-05-18 22:09:01 UTC
The target folder expands on dragging a file when I use expandable view. But when I don't use the expandable view I expect the folders to behave like the folders in symbol view, i.e. that I get into the folder when I drag something onto it. And that does not work, neither with a sidux nor with a Kubuntu KDE 4.4.3 version.

Strange: it does work once after I have enabled and the disabled the expandable view. The second time I try the same it doesn't work anymore.
Comment 3 Tanja Schulte 2010-05-19 17:53:45 UTC
I can confirm this on a Kubuntu Lucid 10.04 system. It even happens with a new user. After I have used the expandable view in detailed mode and then switched back to not expandable view I can drag a file into the automatically opened folder in details view. This works a few times until I close dolphin. After that I first have to activate and then deactivate expandable folders in details view to get autoamatically opening folders for this dolphin session.
Comment 4 Peter Penz 2010-05-19 19:15:17 UTC
Thanks for the hints, I could reproduce the issue now :-)
Comment 5 Peter Penz 2010-11-12 22:15:12 UTC
SVN commit 1196239 by ppenz:

Fix issue that the folders in the details-view are not automatically opened when dragging items and "expandable folders" is disabled.

BUG: 237731
FIXED-IN: 4.5.4


 M  +0 -1      dolphindetailsview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1196239
Comment 6 Peter Penz 2010-11-12 22:15:39 UTC
SVN commit 1196240 by ppenz:

Fix issue that the folders in the details-view are not automatically opened when dragging items and "expandable folders" is disabled.

CCBUG: 237731



 M  +0 -1      dolphindetailsview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1196240