Fix issue that the folders in the details-view are not automatically opened when dragging items and "expandable folders" is disabled.

BUG: 237731
FIXED-IN: 4.5.4

svn path=/branches/KDE/4.5/kdebase/apps/; revision=1196239